@@ -1,5 +1,13 @@
 2017-09-07  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Add event listener(window "unload").
+	
+	* tryXpath/background/try_xpath_background.js: 
+	Define popupState variable.
+	Define genericListener.listeners.storePopupState function.
+	Define genericListener.listeners.requestRestorePopupState function.
+
 	* tryXpath/scripts/try_xpath_content.js:
 	Change genericListener.listeners.execute function.
 	sendMsg.main.resultType and sendMsg.context.resultType have been
